--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.4.2",
     "axios": "^0.19.0",
     "firebase": "^6.6.0",
     "react": "^16.9.0",
