--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "axios": "^0.19.0",
     "firebase": "^6.6.0",
     "he": "^1.2.0",
+    "i": "^0.3.6",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
+    "sticky": "^0.8.0",
     "styled-components": "^4.3.2"
   },
   "scripts": {
