--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-spinner-material": "^1.1.3",
     "react-sticky": "^6.0.3",
     "sticky": "^0.8.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "sweetalert2": "^8.17.4"
   },
   "scripts": {
     "start": "react-scripts start",
