--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,6 +7,12 @@
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
+
+    {
+      "src": "favicon.ico",
+      "type": "image/png",
+      "size": "192x192"
+    },
     
     {
       "src": "logo512.png",
